Trung edit code 13122021

--- a/DATN_F21/src/main/resources/static/css/style.css
+++ b/DATN_F21/src/main/resources/static/css/style.css
@@ -849,6 +849,7 @@ input[type="email"],
 input[type="password"],
 input[type="submit"],
 input[type="date"],
+input[type="number"],
 .gender,
 textarea {
     background-color: var(--white);
