--- a/DATN_F21/src/main/resources/templates/viewsAdmin/ListUser.html
+++ b/DATN_F21/src/main/resources/templates/viewsAdmin/ListUser.html
@@ -13,7 +13,7 @@
              <div class="tab-content">
                  <div class="tab-pane fade " id="liton_tab_details_1_1">
                      <div class="containerUs">
-						<form>
+						<form name="form_user">
 							<div class="row" style="text-align: center;">
 								<div class="col-sm-12 hello" style="text-align: center;">
 									<h5  style="color: orange; margin-top: 20px; font-size: 30px">Chỉnh sửa người dùng</h5>
@@ -23,32 +23,54 @@
 								<div class="col-sm-8">
 									<div class="thongtin_1">
 										<div class="input-data">
-											<input ng-model="form.userid" type="text" required>
-											<div class="underline"></div>
-											<label for="">ID người dùng</label>
+											<label style="margin-bottom: 30px; color: #4158d0;">ID người dùng</label>										
+											<input ng-model="form.userid" type="text" readonly>
+											<!-- <div class="underline"></div> -->
+											
 										</div>
 										<div class="input-data">
-											<input ng-model="form.username"   type="text" required>
+											<input ng-model="form.username" name="username"  type="text" ng-minlength="6" ng-maxlength="15" ng-required="true" ng-pattern="/^[a-z0-9_-]{6,15}$/i" >					
 											<div class="underline"></div>
 											<label for="">Tên đăng nhập</label>
+											<div style="margin-bottom: 20px; color: red">
+												<span class="error" ng-show="form_user.username.$error.required">Không
+													bỏ trống Tên đăng nhập</span> <span class="error"
+													ng-show="form_user.username.$error.minlength">Tên
+													đăng nhập ít nhất phải 6 ký tự</span> <span class="error"
+													ng-show="form_user.username.$error.maxlength">Tên
+													đăng nhập tối đa 15 ký tự</span> <span
+													ng-show="form_user.username.$dirty&&dk.username.$error.pattern">Không
+													đúng định dạng User</span>
+											</div>
 										</div>
 										<div  class="input-data">
-											<input ng-model="form.password"  type="password" required>
+											<input ng-model="form.password" name="password"  type="password" ng-required="true" ng-minlength="6">
 											<div class="underline"></div>
 											<label for="">Mật khẩu</label>
+											<div style="margin-bottom: 20px; color: Red">
+												<span ng-show="form_user.password.$error.required">Không
+													bỏ trống Password</span> <span class="error"
+													ng-show="form_user.password.$error.minlength">Mật khẩu ít nhất phải 6 ký tự</span>
+											</div>
 										</div>
 										<div class="input-data">
-											<input ng-model="form.fullname"  type="text" required>
+											<input ng-model="form.fullname"  type="text" >
 											<div  class="underline"></div>
 											<label for="">Họ và tên</label>
 										</div>
 										<div class="input-data">
-											<input ng-model="form.email"  type="text" required>
+											<input ng-model="form.email"  type="text" name="email" ng-pattern="/^[^\s@]+@[^\s@]+\.[^\s@]{2,}$/"ng-required="true">		
 											<div class="underline"></div>
 											<label for="">Email</label>
+											<div style=" margin-bottom: 20px; color: Red">
+												<span ng-show="form_user.email.$error.required">Không
+													bỏ trống Email</span> <span
+													ng-show="form_user.email.$dirty&&form_user.email.$error.pattern">Không
+													đúng định dạng Email</span>
+											</div>
 										</div>
 										<div class="input-data">
-											<input ng-model="form.phone"  type="text" required>
+											<input ng-model="form.phone"  type="text" >
 											<div class="underline"></div>
 											<label for="">Số điện thoại</label>
 										</div>										
@@ -86,8 +108,8 @@
 								</div>
 							</div>
 							<div class="btna row">
-								<button ng-click="create()" class="btn1" type="submit">Thêm</button>
-								<button ng-click="update()" class="btn2" type="submit">Cập Nhật</button>
+								<button ng-click="create()" class="btn1" type="submit" ng-disabled="form.userid!=null || !form_user.$valid">Thêm</button>
+								<button ng-click="update()" class="btn2" type="submit" ng-disabled="form.userid==null || !form_user.$valid">Cập Nhật</button>
 								<button ng-click="clear()" class="btn2" type="submit">Làm Mới</button>
 							</div>
 						</form>
