--- a/DATN_F21/src/main/resources/templates/viewsAdmin/StoreAd.html
+++ b/DATN_F21/src/main/resources/templates/viewsAdmin/StoreAd.html
@@ -39,7 +39,7 @@
 							<td>{{item.quanlity}}</td>				
 							<!-- <td>{{item.status?'Hoạt động':'Không hoạt động'}}</td> -->
 							<td>
-				                 <input ng-checked="item.status" ng-click="" type="checkbox">
+				                 <input ng-checked="item.status" ng-click="update_status(item)" type="checkbox">
 				            </td>
 						</tr>		
 					</tbody>
