--- a/DATN_F21/src/main/resources/templates/viewsAdmin/statisticalAd.html
+++ b/DATN_F21/src/main/resources/templates/viewsAdmin/statisticalAd.html
@@ -63,6 +63,9 @@
 				</ul>
 			  </nav>
 		</div>
+		<div style="color: blue; background-color:#c2fda0; padding-bottom:1px; padding-top: 1px; padding-left: 5px; padding-right: 5px;" ng-show="pager.items.length<1">
+				<p>Chưa có dữ liệu để thống kê!</p>				
+		</div>
    </main>
 </body>
 </html>
